--- a/public/chat.html
+++ b/public/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Chat App</title>
+      <title>Parla Chat</title>
       <link rel="icon" href="/img/favicon.png">
       <link rel="stylesheet" href="/css/styles.min.css">
     </head>
@@ -42,7 +42,14 @@
         </script>
 
         <script id="sidebar-template" type="text/html">
-            <h2 class="room-title">{{ room }}</h2>
+            <h2 class="room-title">Parla Chat</h2>
+            <label>{{ username }}</label>
+            <h3 class="list-title">Rooms</h3>
+            <ul class="users">
+                {{ #rooms }}
+                  <li><a href="chat.html?username={{ username }}&room={{ room }}" class="room-link"># {{ room }}</a></li>
+                {{ /rooms }}
+            </ul>
             <h3 class="list-title">Users</h3>
             <ul class="users">
                 {{ #users }}
