--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,12 @@
                   <select name="room" required>
                     <option>Announcements</option>
                     <option>General</option>
+                    <option>Marketing</option>
                     <option>Movies</option>
+                    <option>Products</option>
                     <option>Programming</option>
                     <option>Reading</option>
+                    <option>Remote</option>
                   </select>
                   <button>Join</button>
               </form>
