Improve styling for rooms section in sidebar.

--- a/public/chat.html
+++ b/public/chat.html
@@ -48,7 +48,7 @@
             <h2 class="room-title">Parla Chat</h2>
             <label>{{ username }}</label>
             <h3 class="list-title">Rooms</h3>
-            <ul class="users">
+            <ul class="rooms">
                 {{ #rooms }}
                   {{#inuse}}
                     <li class="room-used"># {{ room }}</li>
